# LightCollection

./: CMakeLists.txt  README.md  main.cc  vis.mac
inc/: distribution_algorithms.hh  lgDetectorConstruction.hh  lgEventAction.hh  lgHits.hh  lgPhysicsList.hh  lgPrimaryGeneratorAction.hh  lgRunAction.hh  lgSensitiveDetector.hh
src/: distribution_algorithms.cc  lgDetectorConstruction.cc  lgEventAction.cc  lgHits.cc  lgPhysicsList.cc  lgPrimarygeneratorAction.cc  lgRunAction.cc  lgSensitiveDetector.cc
